[gd_scene load_steps=18 format=3 uid="uid://d42cjr6gh71s"]

[ext_resource type="Material" path="res://materials/wires.tres" id="2_4168k"]
[ext_resource type="Material" uid="uid://o78tcksdt38g" path="res://mm_animated_logo.tres" id="2_cm0ra"]
[ext_resource type="ArrayMesh" uid="uid://ccb73fq73e2s2" path="res://hemisphere.obj" id="2_pe1k3"]
[ext_resource type="Script" path="res://scene.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://nxa0lfkyjp81" path="res://text.svg" id="4_hkwaj"]
[ext_resource type="Texture2D" uid="uid://bklr8smdf2fb4" path="res://kloofendal_48d_partly_cloudy_1k.exr" id="4_m07j6"]

[sub_resource type="CylinderMesh" id="CylinderMesh_lmx0m"]
top_radius = 1.0
bottom_radius = 1.0
height = 0.001
cap_top = false

[sub_resource type="Animation" id="4"]
resource_name = "Slow rotate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshPivot1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(6.28319, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dx508"]
_data = {
"Slow rotate": SubResource("4")
}

[sub_resource type="Animation" id="Animation_y7hvn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshPivot1/MeshPivot2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 3.14159)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshPivot1/MeshPivot2/Mesh2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshPivot1/MeshPivot2/CirclePivot/Circle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Text:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(974, 1020)]
}

[sub_resource type="Animation" id="6"]
resource_name = "Rotate"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshPivot1/MeshPivot2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 3.14159), Vector3(0, 0, 6.28319)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"change_material"
}, {
"args": [],
"method": &"update_label"
}, {
"args": [],
"method": &"update_label"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.25, 0.3, 0.35, 0.7, 0.75, 0.8, 0.85),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0.0625), Color(1, 1, 1, 0.0625), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0.0625), Color(1, 1, 1, 0.0625), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshPivot1/MeshPivot2/Mesh2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MeshPivot1/MeshPivot2/CirclePivot/Circle:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ebdnn"]
resource_name = "Rotate final"
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshPivot1/MeshPivot2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 3.14159)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshPivot1/MeshPivot2/CirclePivot/Circle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MeshPivot1/MeshPivot2/Mesh2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Text:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(974, 1157), Vector2(974, 1157), Vector2(974, 1020)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f57sj"]
_data = {
"RESET": SubResource("Animation_y7hvn"),
"Rotate": SubResource("6"),
"Rotate final": SubResource("Animation_ebdnn")
}

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_p5r2g"]
panorama = ExtResource("4_m07j6")

[sub_resource type="Sky" id="8"]
sky_material = SubResource("PanoramaSkyMaterial_p5r2g")

[sub_resource type="Environment" id="7"]
background_mode = 2
background_color = Color(1, 1, 1, 1)
sky = SubResource("8")
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.5

[sub_resource type="PlaneMesh" id="9"]
size = Vector2(10, 10)

[node name="Scene" type="Node"]
script = ExtResource("3")

[node name="MeshPivot1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -4.46638e-06, 0, 4.46638e-06, 1, 0, 0, 0)

[node name="MeshPivot2" type="Node3D" parent="MeshPivot1"]

[node name="Mesh1" type="MeshInstance3D" parent="MeshPivot1/MeshPivot2"]
transform = Transform3D(-1, -1.50996e-07, 1.49012e-08, -1.49012e-08, -4.37112e-08, -1, 1.50996e-07, -1, 4.37112e-08, 0, 0, 0)
material_override = ExtResource("2_4168k")
mesh = ExtResource("2_pe1k3")
skeleton = NodePath("../../..")

[node name="Mesh2" type="MeshInstance3D" parent="MeshPivot1/MeshPivot2"]
transform = Transform3D(1, -4.37114e-08, 0, 0, -4.37114e-08, 1, -4.37114e-08, -1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = ExtResource("2_pe1k3")
skeleton = NodePath("../../..")

[node name="CirclePivot" type="Node3D" parent="MeshPivot1/MeshPivot2"]

[node name="Circle" type="MeshInstance3D" parent="MeshPivot1/MeshPivot2/CirclePivot"]
transform = Transform3D(8.74228e-08, -1, 4.37115e-08, 4.37114e-08, -4.37115e-08, -1, 1, 8.74228e-08, 4.37114e-08, 0, 0, 0)
material_override = ExtResource("2_cm0ra")
mesh = SubResource("CylinderMesh_lmx0m")
skeleton = NodePath("../..")

[node name="AnimationPlayer1" type="AnimationPlayer" parent="."]
autoplay = "Slow rotate"
playback_speed = 0.03
libraries = {
"": SubResource("AnimationLibrary_dx508")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "Rotate"
reset_on_save = false
playback_speed = 0.2
method_call_mode = 1
libraries = {
"": SubResource("AnimationLibrary_f57sj")
}

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2.2, -0.1, 0)
fov = 60.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("7")

[node name="DirectionalLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.80144, 0.00662634, -0.598039, 0.481731, -0.599755, 0.638928, -0.354443, -0.800156, -0.48386, 0, 0, 0)
shadow_enabled = true
shadow_bias = 0.01
directional_shadow_split_2 = 0.5
directional_shadow_split_3 = 1.0
directional_shadow_blend_splits = true
directional_shadow_max_distance = 5.1

[node name="MeshInstance" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("9")

[node name="Label" type="Label" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -110.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1

[node name="Text" type="Sprite2D" parent="."]
position = Vector2(974, 1157)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_hkwaj")
